# stock-contributor-csv-descriptors

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
CSV-Samples/: Sample_Adobe_Stock_CSV_upload.csv  shutterstock_content_upload.csv
CSV_Samples/: MasterTemplate.csv  OutputFormat-StockContribution.xlsx  Pond5-sample.csv
src/: populate_file_names_to_main_csv.py
src/stock_contributor_csv_descriptors/: common.py  generate_csv_for_stock_websites.py  populate_file_names_to_main_csv.py
stock_contributor_csv_descriptors/: populate_file_names_to_main_csv.py
