[project]
name = "stock-contributor-csv-descriptors-parser"
version = "0.1.0"
authors = [
  { name="Sylvain Riondet", email="sylvainriondet@gmail.com" },
]
description = "Output a CSV file for each selected stock website (such as Adobe Stock, Shutterstock, ...)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sylvain-ri/stock-contributor-csv-descriptors-parser"